- New option: arrowstyle = 1 to draw filled arrows.
- New option: border_shades = { 1.0, 1.0 } to draw a gradient on the border.
- New option: border_colors = { "#ffffff", "#ffffff" }
              to set the colors used on the border of many widgets.
              border_colors = FALSE to disable.
- New option: comboboxstyle = 1 to colorize the GtkComboBox below the arrow.
- New option: gradient_colors = { "#ffffff", "#ffffff", "#ffffff", "#ffffff" }
              to set the colors used on the gradient of many widgets.
              gradient_colors = FALSE to disable.
- New option: prelight_shade = 1.0 to select the shade level used in the
              scrollbar's slider, GtkComboBox with comboboxstyle = 1 and
              in the prelight state with gradient_colors.
- New option: separatorstyle = 1 to draw smooth separators.              
- New option: shadow_shades = { 1.0, 1.0 } to draw a gradient on
              the shadow of some widgets.
- New option: spinbuttonstyle = 1 to add a separator on the GtkSpinButton.
- New option: textstyle = 1 for an inset on the text (use carefully).
              textstyle = 2 for an inverted inset on the text (use carefully).
              textstyle = 3 for a subtle shadow on the text (use carefully).
- New option: trough_shades = { 1.0, 1.0 } to draw a gradient on
              the trough of GtkScrollbar and GtkProgressBar.
- Changed option: listviewstyle = 2 for a solid line.
- Changed option: reliefstyle = 3 for a gradient on shadow,
                  reliefstyle = 4 for a stronger shadow.
- Changed option: stepperstyle = 2 for squared steppers with a rounded slider.
- Deprecated option: gradients, please unset the other options instead.
- Deprecated option: profile, please manually adjust the other options.
- Deprecated option: scrollbar_color, please use a custom bg[SELECTED].
- Improved rendering: rounded GtkScale trough.
- Improved rendering: draw lightborder with on menubar (with menubarstyle = 1).